subprojects/swen430/src/test/resources/tests/valid/Print_Valid_9.while
void main() {
    print {f: "bar"};
}
