subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_26.while
bool f(bool x) {
    return -x;
}